--- a/Login/Login.html
+++ b/Login/Login.html
@@ -22,7 +22,9 @@
             <div class="btn">
                 <input type="submit" value="login">
             </div>
-            
+            <div class="register">
+                <p>Don't have an acount</p> <a href="#">Register</a>
+            </div>
         </form>
     </div>
 </body>
