--- a/Login/Login.html
+++ b/Login/Login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h1>Login</h1>
-        <form action="#">
+        <form action="../Main/Main.html">
             <div class="input-box">
                 <input type="text" placeholder="Usuario" required>
             </div>
@@ -23,7 +23,7 @@
                 <input type="submit" value="login">
             </div>
             <div class="register">
-                <p>Don't have an acount</p> <a href="#">Register</a>
+                <p>Don't have an acount <a href="#">Register</a></p>  
             </div>
         </form>
     </div>
