--- a/Main/Main.html
+++ b/Main/Main.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Main.css">
+    <link rel="icon" href="img/logoAssassins.png" type="icon">
     <title>AssassinsCreedUnity</title>
 </head>
 <body>
     <header>
             <h2>Assassins Creed Unity</h2>
-        <hr>
     </header>
     <main>
-        <section class="Main-Things">
-            <article class="MT">
-                <div class="BOX">
-
-                </div>
-                <div class="BOX">
-
-                </div>
-                <div class="BOX">
-
-                </div>
-            </article>
+        <section class="seccion">
+            <h3 id="titulo">Caracteristicas</h3>
+            <div class="infoPS">
+                <div class="BOX">            
+                    <h3>Hola</h3>
+                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p></div>
+                <div class="BOX">            
+                    <h3>Hola</h3>
+                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p></div>
+                <div class="BOX">            
+                    <h3>Hola</h3>
+                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p></div>
+            </div>
         </section>
     </main>
     <footer>
