--- a/Login/Login.html
+++ b/Login/Login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Login</h1>
+        <img src="img/logoAssassins.png" alt="logo">
         <form action="../Main/Main.html">
             <div class="input-box">
                 <input type="text" placeholder="Usuario" required>
