--- a/Main/Main.html
+++ b/Main/Main.html
@@ -9,21 +9,37 @@
 </head>
 <body>
     <header>
-            <h2>Assassins Creed Unity</h2>
     </header>
     <main>
         <section class="seccion">
-            <h3 id="titulo">Caracteristicas</h3>
             <div class="infoPS">
                 <div class="BOX">            
-                    <h3>Hola</h3>
-                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p></div>
+                    <h3 id="contexto">Contexo</h3>
+                    <p>Ubicado en París durante la Revolución Francesa, el juego sigue la historia de Arno Dorian, un joven Asesino que busca venganza por el asesinato de su padre adoptivo. Los jugadores exploran un mundo abierto recreado del París de finales del siglo XVIII, completo con hitos históricos como la Catedral de Notre-Dame y el Palacio de Versalles.</p></div>
                 <div class="BOX">            
                     <h3>Hola</h3>
-                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p></div>
+                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p>
+                </div>
                 <div class="BOX">            
                     <h3>Hola</h3>
-                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p></div>
+                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p>
+                </div>
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rH634tJuwOw?si=_SzYS-J542_HMmi2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
+            </div>
+            <div class="infoPS">
+                <div class="BOX">            
+                    <h3 id="contexto">Contexo</h3>
+                    <p>Ubicado en París durante la Revolución Francesa, el juego sigue la historia de Arno Dorian, un joven Asesino que busca venganza por el asesinato de su padre adoptivo. Los jugadores exploran un mundo abierto recreado del París de finales del siglo XVIII, completo con hitos históricos como la Catedral de Notre-Dame y el Palacio de Versalles.</p></div>
+                <div class="BOX">            
+                    <h3>Hola</h3>
+                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p>
+                </div>
+                <div class="BOX">            
+                    <h3>Hola</h3>
+                    <p>p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatum quis rem dicta incidunt blanditiis libero ab, quam, architecto dolorem sit officiis debitis. Excepturi, voluptas! Blanditiis facere neque sed atque.</p>
+                </div>
             </div>
         </section>
     </main>
