--- a/Main/Main.html
+++ b/Main/Main.html
@@ -14,7 +14,7 @@
     <main>
         <section class="seccion">
             <div class="video">
-                <iframe width="760" height="515" src="https://www.youtube.com/embed/rH634tJuwOw?si=_SzYS-J542_HMmi2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
+                <iframe src="https://www.youtube.com/embed/rH634tJuwOw?si=_SzYS-J542_HMmi2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
             </div>
             <div class="infoPS">
                 <div class="BOX">            
@@ -47,34 +47,29 @@
         </section>
         <section class="seccion">
             <div class="video">
-                <iframe width="760" height="515" src="https://www.youtube.com/embed/ptQ-XqaoHGI?si=9aN_fI3ngBbiGGiG&amp;start=306" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/ptQ-XqaoHGI?si=9aN_fI3ngBbiGGiG&amp;start=306" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="infoPS">
                 <div class="BOX">            
-                    <h3>REQUISITOS MINIMOS</h3>
+                    <h3>MODO COOPERATIVO</h3>
+                    <p>El modo cooperativo es una nueva modalidad multijugador implementada en la nueva entrega de la saga: Assassin's Creed: Unity. Tras el éxito obtenido con el modo multijugador "Manada de lobos" en Assassin's Creed III y Assassin's Creed IV: Black Flag, Assassin's Creed: Unity es el primer juego en incluir un modo de campaña cooperativa que no es aparte de la campaña  principal.</p>
+                </div>
+                <div class="BOX">            
+                    <h3>TIPOS DE MISIONES COOPERATIVAS</h3>
                     <ul>
-                        <li>SO: Windows 10 (64-bit versions only)</li>
-                        <li>Procesador: Intel Core i5-2500K @ 3.3 GHz or AMD FX-8350 @ 4.0 GHz</li>
-                        <li>Memoria: 6 GB de RAM</li>
-                        <li>Gráficos: NVIDIA GeForce GTX 680 or AMD Radeon HD 7970 (2 GB VRAM)</li>
-                        <li>Almacenamiento: 50 GB de espacio disponible</li>
-                        <li>Tarjeta de sonido: DirectX 9.0c compatible sound card with latest drivers</li>
+                        <li>Misiones de la Hermandad: Son misiones relacionadas con asuntos de la Hermandad y con los acontecimientos de la Revolución Francesa. Estas misiones van desde participar en eventos clave dentro del contexto de la revolución como sabotear ejecuciones, protegiendo a un personaje importante o asesinando a un objetivo.</li>
+                        <li>Misiones de Robo: Son misiones en las que los Asesinos buscan robar dinero o recuperar artefactos de los templarios. Para ello los Asesinos se infiltran dentro de los cuarteles templarios y recuperar el botín templario, desafortunadamente, entre más seas detectado, menos dinero obtendras.
+                        </li>
                     </ul>
                 </div>
                 <div class="BOX">            
-                    <h3>REQUISITOS RECOMENDADOS</h3>
+                    <h3>HABILIDADES MULTIJUGADOR</h3>
                     <ul>
-                        <li>SO: Windows 10 (64-bit versions only)</li>
-                        <li>Procesador: Intel Core i7-3770 @ 3.4 GHz or AMD FX-8350 @ 4.0 GHz or better</li>
-                        <li>Memoria: 8 GB de RAM</li>
-                        <li>ráficos: NVIDIA GeForce GTX 780 or AMD Radeon R9 290X (3 GB VRAM)</li>
-                        <li>Almacenamiento: 50 GB de espacio disponible</li>
-                        <li>Tarjeta de sonido: DirectX 9.0c compatible sound card with latest drivers</li>
+                        <li>Salud: Son Asesinos defensivos con una piel muy gruesa. Ellos pueden sobrevivir a más ataques enemigos, lo cual es una habilidad salvavidas.</li>
+                        <li>Cuerpo a cuerpo:  Son Asesinos letales que prefieren atacar enemigos frente a frente. Se caracterizan por la gran cantidad de daño que vienen en sus ataques.</li>
+                        <li>Sigilo: Son Asesinos silenciosos que no pueden ser detectados. Se escabullen en lugares restrigidos y asesinan sin ser vistos.</li>
+                        <li>Alcance: Son Asesinos precisos, quienes se pueden mover por cualquier parte de París y matar objetivos desde distancias largas. Esperan hasta que sea el momento adecuado, entonces atacan desde las sombras.</li>
                     </ul>
-                </div>
-                <div class="BOX">            
-                    <h3>ACERCA DE ESTE JUEGO</h3>
-                    <p>Assassin’s Creed® Unity es un juego de acción/aventura con el que te sumerges en un París lleno de vida durante su época más oscura: la Revolución Francesa. Tendrás control total sobre Arno, ya que podrás personalizar su equipo tanto visual como técnicamente. Además de contar contar con una gran campaña individual, Assassin’s Creed Unity te da la oportunidad de jugar junto con 3 amigos en misiones concretas de una campaña cooperativa online. Durante el juego, formarás parte de momentos clave de la historia francesa que dieron lugar al enorme París que hoy todos conocemos.</p>
                 </div>
             </div>
         </section>
