--- a/Main/Main.html
+++ b/Main/Main.html
@@ -1,81 +1,167 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Main.css">
-    <link rel="icon" href="img/logoAssassins.png" type="icon">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Main.css" />
+    <link rel="icon" href="Img/logoAssassins.png" type="Img" />
     <title>AssassinsCreedUnity</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
+      <nav>
+        <div class="navLogos">
+          <img src="img/logoAssassins.png" width="100%" alt="logo" />
+        </div>
+        <div class="navLinks">
+          <a href="../Main/Main.html">Home</a>
+          <a href="#">Acerca de</a>
+          <a href="#">Contacto</a>
+        </div>
+      </nav>
     </header>
-    <hr>
     <main>
-        <section class="seccion">
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/rH634tJuwOw?si=_SzYS-J542_HMmi2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
-            </div>
-            <div class="infoPS">
-                <div class="BOX">            
-                    <h3>REQUISITOS MINIMOS</h3>
-                    <ul>
-                        <li>SO: Windows 10 (64-bit versions only)</li>
-                        <li>Procesador: Intel Core i5-2500K @ 3.3 GHz or AMD FX-8350 @ 4.0 GHz</li>
-                        <li>Memoria: 6 GB de RAM</li>
-                        <li>Gráficos: NVIDIA GeForce GTX 680 or AMD Radeon HD 7970 (2 GB VRAM)</li>
-                        <li>Almacenamiento: 50 GB de espacio disponible</li>
-                        <li>Tarjeta de sonido: DirectX 9.0c compatible sound card with latest drivers</li>
-                    </ul>
-                </div>
-                <div class="BOX">            
-                    <h3>REQUISITOS RECOMENDADOS</h3>
-                    <ul>
-                        <li>SO: Windows 10 (64-bit versions only)</li>
-                        <li>Procesador: Intel Core i7-3770 @ 3.4 GHz or AMD FX-8350 @ 4.0 GHz or better</li>
-                        <li>Memoria: 8 GB de RAM</li>
-                        <li>ráficos: NVIDIA GeForce GTX 780 or AMD Radeon R9 290X (3 GB VRAM)</li>
-                        <li>Almacenamiento: 50 GB de espacio disponible</li>
-                        <li>Tarjeta de sonido: DirectX 9.0c compatible sound card with latest drivers</li>
-                    </ul>
-                </div>
-                <div class="BOX">            
-                    <h3>ACERCA DE ESTE JUEGO</h3>
-                    <p>Assassin’s Creed® Unity es un juego de acción/aventura con el que te sumerges en un París lleno de vida durante su época más oscura: la Revolución Francesa. Tendrás control total sobre Arno, ya que podrás personalizar su equipo tanto visual como técnicamente. Además de contar contar con una gran campaña individual, Assassin’s Creed Unity te da la oportunidad de jugar junto con 3 amigos en misiones concretas de una campaña cooperativa online. Durante el juego, formarás parte de momentos clave de la historia francesa que dieron lugar al enorme París que hoy todos conocemos.</p>
-                </div>
-            </div>
-        </section>
-        <section class="seccion">
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/ptQ-XqaoHGI?si=9aN_fI3ngBbiGGiG&amp;start=306" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-            <div class="infoPS">
-                <div class="BOX">            
-                    <h3>MODO COOPERATIVO</h3>
-                    <p>El modo cooperativo es una nueva modalidad multijugador implementada en la nueva entrega de la saga: Assassin's Creed: Unity. Tras el éxito obtenido con el modo multijugador "Manada de lobos" en Assassin's Creed III y Assassin's Creed IV: Black Flag, Assassin's Creed: Unity es el primer juego en incluir un modo de campaña cooperativa que no es aparte de la campaña  principal.</p>
-                </div>
-                <div class="BOX">            
-                    <h3>TIPOS DE MISIONES COOPERATIVAS</h3>
-                    <ul>
-                        <li>Misiones de la Hermandad: Son misiones relacionadas con asuntos de la Hermandad y con los acontecimientos de la Revolución Francesa. Estas misiones van desde participar en eventos clave dentro del contexto de la revolución como sabotear ejecuciones, protegiendo a un personaje importante o asesinando a un objetivo.</li>
-                        <li>Misiones de Robo: Son misiones en las que los Asesinos buscan robar dinero o recuperar artefactos de los templarios. Para ello los Asesinos se infiltran dentro de los cuarteles templarios y recuperar el botín templario, desafortunadamente, entre más seas detectado, menos dinero obtendras.
-                        </li>
-                    </ul>
-                </div>
-                <div class="BOX">            
-                    <h3>HABILIDADES MULTIJUGADOR</h3>
-                    <ul>
-                        <li>Salud: Son Asesinos defensivos con una piel muy gruesa. Ellos pueden sobrevivir a más ataques enemigos, lo cual es una habilidad salvavidas.</li>
-                        <li>Cuerpo a cuerpo:  Son Asesinos letales que prefieren atacar enemigos frente a frente. Se caracterizan por la gran cantidad de daño que vienen en sus ataques.</li>
-                        <li>Sigilo: Son Asesinos silenciosos que no pueden ser detectados. Se escabullen en lugares restrigidos y asesinan sin ser vistos.</li>
-                        <li>Alcance: Son Asesinos precisos, quienes se pueden mover por cualquier parte de París y matar objetivos desde distancias largas. Esperan hasta que sea el momento adecuado, entonces atacan desde las sombras.</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+      <div class="banner">
+        <p>
+          <h1 id="banner1">ASSASSINS</h1>
+          <h3 id="banner2">CREED</h3>
+          <h1 id="banner3">Unity</h1>
+        </p>
+      </div>
+      <section class="seccion">
+          <div class="video">
+            <video class="display" src="video/y2mate.com - Assassins Creed Unity Trailer CGI E3 2014 ES_1080p.mp4" autoplay controls muted></video>
+          </div>
+        <div class="infoPS">
+          <div class="BOX">
+            <h3>REQUISITOS MINIMOS</h3>
+            <ul>
+              <li>SO: Windows 10 (64-bit versions only)</li>
+              <li>
+                Procesador: Intel Core i5-2500K @ 3.3 GHz or AMD FX-8350 @ 4.0
+                GHz
+              </li>
+              <li>Memoria: 6 GB de RAM</li>
+              <li>
+                Gráficos: NVIDIA GeForce GTX 680 or AMD Radeon HD 7970 (2 GB
+                VRAM)
+              </li>
+              <li>Almacenamiento: 50 GB de espacio disponible</li>
+              <li>
+                Tarjeta de sonido: DirectX 9.0c compatible sound card with
+                latest drivers
+              </li>
+            </ul>
+          </div>
+          <div class="BOX">
+            <h3>REQUISITOS RECOMENDADOS</h3>
+            <ul>
+              <li>SO: Windows 10 (64-bit versions only)</li>
+              <li>
+                Procesador: Intel Core i7-3770 @ 3.4 GHz or AMD FX-8350 @ 4.0
+                GHz or better
+              </li>
+              <li>Memoria: 8 GB de RAM</li>
+              <li>
+                ráficos: NVIDIA GeForce GTX 780 or AMD Radeon R9 290X (3 GB
+                VRAM)
+              </li>
+              <li>Almacenamiento: 50 GB de espacio disponible</li>
+              <li>
+                Tarjeta de sonido: DirectX 9.0c compatible sound card with
+                latest drivers
+              </li>
+            </ul>
+          </div>
+          <div class="BOX">
+            <h3>ACERCA DE ESTE JUEGO</h3>
+            <p>
+              Assassin’s Creed® Unity es un juego de acción/aventura con el que
+              te sumerges en un París lleno de vida durante su época más oscura:
+              la Revolución Francesa. Tendrás control total sobre Arno, ya que
+              podrás personalizar su equipo tanto visual como técnicamente.
+              Además de contar contar con una gran campaña individual,
+              Assassin’s Creed Unity te da la oportunidad de jugar junto con 3
+              amigos en misiones concretas de una campaña cooperativa online.
+              Durante el juego, formarás parte de momentos clave de la historia
+              francesa que dieron lugar al enorme París que hoy todos conocemos.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="seccion">
+          <div class="video">
+            <video class="display" src="video/Assassin's Creed Unity Official E3 2014 Co-op Commented Demo [SCAN].mp4" autoplay controls muted></video>
+          </div>
+        <div class="infoPS">
+          <div class="BOX">
+            <h3>MODO COOPERATIVO</h3>
+            <p>
+              El modo cooperativo es una nueva modalidad multijugador
+              implementada en la nueva entrega de la saga: Assassin's Creed:
+              Unity. Tras el éxito obtenido con el modo multijugador "Manada de
+              lobos" en Assassin's Creed III y Assassin's Creed IV: Black Flag,
+              Assassin's Creed: Unity es el primer juego en incluir un modo de
+              campaña cooperativa que no es aparte de la campaña principal.
+            </p>
+          </div>
+          <div class="BOX">
+            <h3>TIPOS DE MISIONES COOPERATIVAS</h3>
+            <ul>
+              <li>
+                Misiones de la Hermandad: Son misiones relacionadas con asuntos
+                de la Hermandad y con los acontecimientos de la Revolución
+                Francesa. Estas misiones van desde participar en eventos clave
+                dentro del contexto de la revolución como sabotear ejecuciones,
+                protegiendo a un personaje importante o asesinando a un
+                objetivo.
+              </li>
+              <li>
+                Misiones de Robo: Son misiones en las que los Asesinos buscan
+                robar dinero o recuperar artefactos de los templarios. Para ello
+                los Asesinos se infiltran dentro de los cuarteles templarios y
+                recuperar el botín templario, desafortunadamente, entre más seas
+                detectado, menos dinero obtendras.
+              </li>
+            </ul>
+          </div>
+          <div class="BOX">
+            <h3>HABILIDADES MULTIJUGADOR</h3>
+            <ul>
+              <li>
+                Salud: Son Asesinos defensivos con una piel muy gruesa. Ellos
+                pueden sobrevivir a más ataques enemigos, lo cual es una
+                habilidad salvavidas.
+              </li>
+              <li>
+                Cuerpo a cuerpo: Son Asesinos letales que prefieren atacar
+                enemigos frente a frente. Se caracterizan por la gran cantidad
+                de daño que vienen en sus ataques.
+              </li>
+              <li>
+                Sigilo: Son Asesinos silenciosos que no pueden ser detectados.
+                Se escabullen en lugares restrigidos y asesinan sin ser vistos.
+              </li>
+              <li>
+                Alcance: Son Asesinos precisos, quienes se pueden mover por
+                cualquier parte de París y matar objetivos desde distancias
+                largas. Esperan hasta que sea el momento adecuado, entonces
+                atacan desde las sombras.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-
+      <a href="../Login/Login.html">
+        <img
+          src="img/logoAssassins.png"
+          alt="Gaming Zone Logo y Texto"
+          height="150px"
+        />
+      </a>
     </footer>
-</body>
+    <script src="./Main.js"></script>
+  </body>
 </html>
