--- a/Main/Main.html
+++ b/Main/Main.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="./Main.css" />
     <link rel="icon" href="Img/logoAssassins.png" type="Img" />
     <title>AssassinsCreedUnity</title>
-    <script src="./Main.js"></script>
   </head>
   <body>
     <header>
@@ -22,7 +21,7 @@
       </nav>
     </header>
     <main>
-      <div class="banner">
+      <div class="banner" onclick="cambiar()">
         <p>
           <h1 id="banner1">ASSASSINS</h1>
           <h3 id="banner2">CREED</h3>
@@ -163,5 +162,6 @@
         />
       </a>
     </footer>
+    <script src="./Main.js"></script>
   </body>
 </html>
