--- a/Login/Login.html
+++ b/Login/Login.html
@@ -24,7 +24,7 @@
                 <input type="submit" value="login">
             </div>
             <div class="register">
-                <p>Don't have an acount <a href="#">Register</a></p>  
+                <p>Don't have an acount <a href="../Register/Register.html" >Register</a></p>  
             </div>
         </form>
     </div>
